# outskilled

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: publish.yml
examples/agent_demo/: README.md  run_demo.py  run_live.py  test_skill_routing.py
examples/agent_demo/skills/: skills.yaml
examples/agent_demo/skills/code/refactor/extract-method/: SKILL.md
examples/agent_demo/skills/notes/search/: SKILL.md
examples/agent_demo/skills/notes/write/: SKILL.md
examples/agent_demo/skills/reply-style/: SKILL.md
src/outskilled/: __init__.py  errors.py  manifest.py  models.py  parser.py  pydanticai.py  registry.py  validator.py
src/skillfull/: __init__.py  errors.py  manifest.py  parser.py  pydanticai.py  registry.py  validator.py
tests/: conftest.py  test_manifest.py  test_parser.py  test_pydanticai.py  test_registry.py  test_validator.py
