[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillfull"
version = "0.1.0"
description = "Filesystem-based agent skill loader: spec + reference implementation."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "phiweger", email = "3918306+phiweger@users.noreply.github.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["skills", "agents", "llm", "claude", "pydantic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pydantic-ai = [
    "pydantic-ai>=1.0",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "pydantic-ai>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skillfull"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
